fixed dark mode icons

--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@
   .project-box {
     background-color: #333 !important;
   }
+  #github {
+    filter: invert(98%) sepia(0%) saturate(471%) hue-rotate(137deg)
+      brightness(93%) contrast(85%);
+  }
+  .contact-line img {
+    filter: invert(98%) sepia(0%) saturate(471%) hue-rotate(137deg)
+      brightness(93%) contrast(85%);
+  }
 }
 
 * {
